arc: Fix metrics change in ARC OptIn is not reflected in Settings.

This modifies ChromeOS settings for metrics instead of lower level
metrics preferences. ChromeOS settings change has mapping to lower
level metrics but not the opposite way. That is why change in metrics
mode from ARC OptIn page was not propogated to Chrome settings.

Test: Manually on device
Bug: 755716
Change-Id: I81ce5d38d34ade6d6f2737804eee5c1e7fa0822e