chrome/browser/metrics/chrome_metrics_service_accessor.h
@@ -26,10 +26,6 @@ class CrashesDOMHandler;
 class FlashDOMHandler;
 }
 
-namespace arc {
-class ArcOptInPreferenceHandler;
-}
-
 namespace chrome {
 void AttemptRestart();
 namespace android {
@@ -93,7 +89,6 @@ class ChromeMetricsServiceAccessor : public metrics::MetricsServiceAccessor {
  private:
   friend class ::CrashesDOMHandler;
   friend class ::FlashDOMHandler;
-  friend class arc::ArcOptInPreferenceHandler;
   friend class BrowserProcessImpl;
   friend void chrome::AttemptRestart();
   friend class chrome::android::ExternalDataUseObserverBridge;
